# syntherklaas

./: Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
src/: audio.rs  keyboard.rs  main.rs  tui.rs  waveform.rs
src/app/: focus.rs  message.rs  mod.rs  state.rs  update.rs
src/music/: mod.rs  piano.rs
